# Bisca

./: .gitignore  README.md
Backend/app/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.simple.yml  docker-compose.yml
Backend/app/database/: init.js
Backend/app/scripts/: clean_stop.sh  dev.sh  generate_dev_certs.sh  optimized_start.sh  setup_production_https.sh  start_server.sh  test-api.sh
Backend/app/src/: auth.rs  https_server.rs  main.rs  sse.rs  websocket.rs
Backend/app/src/models/: card.rs  cards.rs  cards2.0.rs  game.rs  gameprova.rs  mod.rs  player.rs  users.rs
Frontend/: README.md  pubspec.yaml
Frontend/android/app/: build.gradle.kts
Frontend/android/app/src/main/: AndroidManifest.xml
Frontend/ios/Runner/: Info.plist
Frontend/ios/Runner.xcodeproj/: project.pbxproj
Frontend/lib/: app.dart  main.dart
Frontend/lib/core/models/: card_model.dart  game_event.dart  player_model.dart
Frontend/lib/core/services/: auth_api.dart  game_api.dart  game_socket.dart
Frontend/lib/core/state/: app_providers.dart
Frontend/lib/features/auth/controllers/: auth_controller.dart
Frontend/lib/features/auth/views/: login_screen.dart  (+1 more)
Frontend/lib/routes/: app_router.dart
Frontend/linux/: CMakeLists.txt
Frontend/linux/runner/: my_application.cc
Frontend/macos/Runner.xcodeproj/: project.pbxproj
Frontend/macos/Runner/Configs/: AppInfo.xcconfig
Frontend/test/: widget_test.dart
Frontend/web/: index.html  manifest.json
Frontend/windows/: CMakeLists.txt
Frontend/windows/runner/: Runner.rc  main.cpp
(+7 files in other folders)
